tests/rename/should_fail/rnfail058.hs
module MultipleWarnings where

{-# DEPRECATED foo "Don't use me" #-}
{-# DEPRECATED foo "Don't use me" #-}
foo :: Int
foo = 2